2007-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (GetDirectiveCompletionData):
	Add #pragma to the directives. Fixes bug #81131.

2007-03-14  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Fixed a bug where
	if you typed the full completion text and then used <Enter> to
	complete the fully-typed completion text, the Smart Indent code
	would indent the next line even though it shouldn't have done so.

2007-03-14  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use 'fname' as the
	filename to embed. It is updated appropriately by GetResourceId().

2007-03-13  Miguel de Icaza  <miguel@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): an old patch that I
	had lying on my hard drive.   When using WinExe targets, pass the
	"winexe" flag to the compiler.

	Also pass the actual compiled resource file to be embedded, not
	the source file. 

2007-03-13  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs (PushFoldedStatement):
	Push one anyway if our keyword (or our parent's keyword) is a loop
	or if-else keyword.

2007-03-11  Jeffrey Stedfast  <fejj@gnome.org>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Simplified a bit.
	(KeyPress): Changed the logic for the tab-completion check, if
	more than a single char has been inserted then it should be
	considered to be tab-completion.
	(KeyPress): Don't reindent multi-line comment lines unless they
	begin with a '*', in which case the user probably wants to realign
	them (if the first char on the line isn't a '*' then it might be a
	commented-out block of code, we don't want to reindent that).

2007-03-10  Jeffrey Stedfast  <fejj@gnome.org>

	* FormattingStrategy/CSharpIndentEngineStack.cs (Push): We now
	have an Inside.Case type to implement.

	* FormattingStrategy/CSharpIndentEngine.cs (PushColon): Push a
	Inside.Case onto the stack if appropriate and check